Feat: Implementação de Melhorias

--- a/exercicio2.html
+++ b/exercicio2.html
@@ -31,7 +31,7 @@
                 </P>
             </div>
             <div class="right2">
-                <div class="vantagem">
+                <div class="vantagem" id="par1">
                     <img src="img/eletrica.svg" class="icone">
                     <div class="vantagemText">
                         <h4>Motor Elétrico</h4>
@@ -45,7 +45,7 @@
                         <p>A mais rápida bicicleta elétrica disponível hoje no mercado</p>
                     </div> 
                 </div> 
-                <div class="vantagem">
+                <div class="vantagem" id="par2">
                     <img src="img/rastreador.svg" class="icone">
                     <div class="vantagemText">
                         <h4>Rastreador</h4>
